# db-retry

./: AGENTS.md  CLAUDE.md  Justfile  README.md  context7.json  pyproject.toml
.github/workflows/: _checks.yml  release.yml
architecture/: README.md  connections.md  dsn.md  glossary.md  retriable.md  retry.md  settings.md  transaction.md
db_retry/: connections.py  dsn.py  retriable.py  retry.py  settings.py  transaction.py
planning/: README.md  deferred.md
planning/changes/2026-06-26.01-retriable-error-seam/: design.md  plan.md
planning/changes/2026-06-26.02-retriable-test-hardening/: change.md
planning/changes/2026-06-26.03-connection-plan-split/: design.md  plan.md
planning/changes/2026-06-27.01-connect-args-readonly/: change.md
planning/changes/2026-06-30.01-python-3.11-3.12-support/: design.md  plan.md
planning/decisions/: 2026-06-27-retry-default-stays-env-configured.md
planning/releases/: 0.4.3.md  0.5.0.md  0.5.1.md
tests/: conftest.py  test_connection_factory.py  test_retriable.py  test_retry.py
