[project]
name = "db-retry"
description = "Retry helpers for PostgreSQL / SQLAlchemy database operations"
authors = [
    { name = "Artur Shiriev", email = "me@shiriev.ru" },
]
readme = "README.md"
requires-python = ">=3.13,<4"
license = "MIT"
keywords = ["postgresql", "sqlalchemy", "retry", "database", "asyncio", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
version = "0.0.0"
dependencies = [
    "tenacity",
    "sqlalchemy[asyncio]",
    "asyncpg",
]

[project.urls]
Homepage = "https://modern-python.org"
Repository = "https://github.com/modern-python/db-retry"
Issues = "https://github.com/modern-python/db-retry/issues"
Changelog = "https://github.com/modern-python/db-retry/releases"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "advanced-alchemy",
]
lint = [
    "ruff",
    "ty",
    "eof-fixer",
    "asyncpg-stubs",
]

[build-system]
requires = ["uv_build>=0.11,<1.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "db_retry"
module-root = ""

[tool.ruff]
fix = false
unsafe-fixes = true
line-length = 120
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1", # allow missing docstrings
    "S101", # allow asserts
    "TCH", # ignore flake8-type-checking
    "FBT", # allow boolean args
    "D203", # "one-blank-line-before-class" conflicting with D211
    "D213", # "multi-line-summary-second-line" conflicting with D212
    "COM812", # flake8-commas "Trailing comma missing"
    "ISC001", # flake8-implicit-str-concat
    "G004", # allow f-strings in logging
]
isort.lines-after-imports = 2
isort.no-lines-before = ["standard-library", "local-folder"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report term-missing --cov-fail-under=100"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_also = [
    "if typing.TYPE_CHECKING:",
]
